--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "nodemon": "^3.0.3",
+    "sharp": "^0.33.2",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
